# bpjs-agentic-ai

./: .env.example  .gitignore  AGENTIC_AI_ARCHITECTURE.md  AGENTIC_AI_ARCHITECTURE_SIMPLE.md  ALIGNMENT_HEALTHKATHON.md  ANALISIS_RESPONS_NON_URGEN.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHROMA.md  Dockerfile  FITUR_BELUM_IMPLEMENTASI.md  GAP_ANALYSIS_HEALTHKATHON.md  Healthkathon BPJS 2025 full.txt  Healthkathon BPJS 2025.txt  README.md  TECHNICAL_SPECS.md  TESTING_NON_URGEN.md  cloudbuild.yaml  deploy_cloud_run.sh  pyproject.toml  start_custom_ui.sh  start_server.sh
agent_docs/: agent_config.md  agent_evaluation.md  agent_safety.md  agent_team.md  custom-agents.md  multi_agent_system.md  parallel_agent.md  sequential_agent.md
deployment/: deploy.py  test_deployment.py
medical_triage_agent/: agent.py  prompt.py
medical_triage_agent/knowledge_base/: README.md  __init__.py  chroma_setup.py  chroma_tools.py  initialize_chroma.py
medical_triage_agent/sub_agents/documentation_agent/: agent.py  prompt.py
medical_triage_agent/sub_agents/documentation_agent/tools/: __init__.py  tools.py
medical_triage_agent/sub_agents/execution_agent/: agent.py  prompt.py
medical_triage_agent/sub_agents/interview_agent/: agent.py  prompt.py
medical_triage_agent/sub_agents/reasoning_agent/: agent.py  prompt.py
medical_triage_agent/tools/: state_tools.py
web_ui/: README.md  __init__.py  app.py
web_ui/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
web_ui/frontend/src/: App.tsx  global.css
web_ui/frontend/src/components/: ArchivedChatView.tsx  (+5 more)
(+17 files in other folders)
